# build-pipeline-automation

./: .dockerignore  .gitignore  Dockerfile  README.md  pipeline-config.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.gitlab/: ci.yml
scripts/: run-pipeline.sh  run_pipeline.py
src/: __init__.py  pipeline.py
src/build-pipeline-automation/: __init__.py  pipeline.py
src/stages/: __init__.py  base.py  build.py  lint.py  pipeline.py  publish.py  test.py
src/utils/: __init__.py  config.py  logger.py
tests/: __init__.py  test_pipeline.py  test_stages.py
