[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "build-pipeline-automation"
version = "0.1.0"
description = "Automates compiling, testing, packaging, and publishing application artifacts"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
  { name = "Muyiwa", email = "your.email@example.com" }
]

keywords = ["devops", "ci/cd", "pipeline", "automation"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
]

dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.9.0"
]

[project.urls]
Homepage = "https://github.com/your-org/build-pipeline-automation"
Issues = "https://github.com/your-org/build-pipeline-automation/issues"


# -----------------------
# Ruff Configuration
# -----------------------
[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [".git", ".venv", "__pycache__", "build", "dist", "*.egg-info"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # Pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM"  # flake8-simplify
]

ignore = ["E501"]   # Line too long (handled by formatter)

[tool.ruff.lint.isort]
known-first-party = ["build_pipeline_automation"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false


# -----------------------
# Pytest Configuration
# -----------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "--tb=short"]

markers = [
  "unit: unit tests",
  "integration: integration tests"
]


# -----------------------
# Coverage Configuration
# -----------------------
[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/__init__.py", "*/site-packages/*", "tests/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:"
]